--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: windows-latest
 
-    steps:    
+    steps:
     - uses: actions/checkout@v2
     
     - name: Setup MSBuild
@@ -34,11 +34,10 @@ jobs:
       run: |
         msbuild.exe remNamer.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
     
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Build project # This would actually build your project, using zip for an example artifact
-      run: |
-         zip --junk-paths my-artifact ../_build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: ../_build
           
     - name: Create Release
       id: create_release
