--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: my-artifact
-        path: ../_build
+        path: D:\a\RemNamer\RemNamer\remNamer\bin\Release\
           
     - name: Create Release
       id: create_release
