--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 name: Build .Net Forms and publish realease
 
+#Trigger
 on:
   push:
-    # Sequence of patterns matched against refs/tags
+    branches:
+      - master
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - v*
       
 jobs:
   build:
