--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,8 @@ jobs:
         msbuild.exe remNamer.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
     
     - name: 'Zip files'
-      run: tar -c -v -f release-artifact.zip D:\a\RemNamer\RemNamer\remNamer\bin\Release
-
-    - run: dir D:\a\RemNamer\RemNamer\remNamer\bin\Release\
-    
+      run: tar -c -v -f D:\a\RemNamer\RemNamer\remNamer\bin\Release\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer\bin\Release
+        
     - run: dir D:\a\RemNamer\RemNamer\remNamer\bin\Release\
 
     - uses: actions/upload-artifact@v2
