--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
         msbuild.exe remNamer.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
     
     - name: See curent dir
-      run: dir=$(PWD)
-    
+      run: dir    
     
     - name: 'Zip files'
       run: tar -c -v -f D:\a\RemNamer\RemNamer\remNamer\bin\Release\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer\bin\Release
