--- a/.github/workflows/testZIP.yml
+++ b/.github/workflows/testZIP.yml
@@ -20,6 +20,6 @@ jobs:
       run: dir    
     
     - name: 'Zip files'
-      run: tar -c -v -f D:\a\RemNamer\RemNamer\remNamer\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer\bin\Release
+      run: tar -c -v -f D:\a\RemNamer\RemNamer\remNamer\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer
         
     - run: dir D:\a\RemNamer\RemNamer\remNamer\
