--- a/.github/workflows/testZIP.yml
+++ b/.github/workflows/testZIP.yml
@@ -21,5 +21,6 @@ jobs:
     
     - name: 'Zip files'
       run: tar -c -v -f D:\\a\\RemNamer\\RemNamer\\remNamer\\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer
+      continue-on-error: true
         
     - run: dir D:\a\RemNamer\RemNamer\remNamer\
