--- a/.github/workflows/testZIP.yml
+++ b/.github/workflows/testZIP.yml
@@ -20,7 +20,7 @@ jobs:
       run: dir    
     
     - name: 'Zip files'
-      run: tar -c -v -f D:\\a\\RemNamer\\RemNamer\\remNamer\\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer
+      run: 7z a -tzip D:\\a\\RemNamer\\RemNamer\\remNamer\\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer
       continue-on-error: true
         
     - run: dir D:\a\RemNamer\RemNamer\remNamer\
