--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       run: dir    
     
     - name: 'Zip files'
-      run: tar -c -v -f D:\a\RemNamer\RemNamer\remNamer\bin\Release\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer\bin\Release
+      run: 7z a -tzip D:\\a\\RemNamer\\RemNamer\\remNamer\\release-artifact.zip D:\a\RemNamer\RemNamer\remNamer\bin\Release
       continue-on-error: true
         
     - run: dir D:\a\RemNamer\RemNamer\remNamer\bin\Release\
